# super-duper-octo-fishstick

./: .env.sample  main.py  pyproject.toml
src/: decorators.py  generators.py  masks.py  processing.py  utils.py  widget.py
tests/: test_decorators.py  test_generators.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py  testing utils.py  testing_processing.py
